Aress7/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Agent%2FDeveloper</fullName>
        <description>This is the sales process for agents and developers.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Invoiced</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Commercial</fullName>
        <description>This is the commercial sales process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Developing Proposal</fullName>
        </values>
        <values>
            <fullName>Install Cancelled</fullName>
        </values>
        <values>
            <fullName>Install Completed</fullName>
        </values>
        <values>
            <fullName>Install Confirmed</fullName>
        </values>
        <values>
            <fullName>Install Incomplete</fullName>
        </values>
        <values>
            <fullName>Install On Hold</fullName>
        </values>
        <values>
            <fullName>Install Paused</fullName>
        </values>
        <values>
            <fullName>Install Requested</fullName>
        </values>
        <values>
            <fullName>Install Scheduled</fullName>
        </values>
        <values>
            <fullName>Install Verified</fullName>
        </values>
        <values>
            <fullName>Invoiced</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Survey Cancelled</fullName>
        </values>
        <values>
            <fullName>Survey Completed</fullName>
        </values>
        <values>
            <fullName>Survey Incomplete</fullName>
        </values>
        <values>
            <fullName>Survey On Hold</fullName>
        </values>
        <values>
            <fullName>Survey Quoted</fullName>
        </values>
        <values>
            <fullName>Survey Requested</fullName>
        </values>
        <values>
            <fullName>Survey Scheduled</fullName>
        </values>
        <values>
            <fullName>Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CommercialMasterBid</fullName>
        <description>This is for Commercial Master Bid sales process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Home Charge</fullName>
        <description>Home Charge Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Install Cancelled</fullName>
        </values>
        <values>
            <fullName>Install Completed</fullName>
        </values>
        <values>
            <fullName>Install Incomplete</fullName>
        </values>
        <values>
            <fullName>Install On Hold</fullName>
        </values>
        <values>
            <fullName>Install Requested</fullName>
        </values>
        <values>
            <fullName>Install Scheduled</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Ongoing</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Home Charge Norway</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Install Cancelled</fullName>
        </values>
        <values>
            <fullName>Install Completed</fullName>
        </values>
        <values>
            <fullName>Install On Hold</fullName>
        </values>
        <values>
            <fullName>Install Requested</fullName>
        </values>
        <values>
            <fullName>Install Scheduled</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Other Type Accounts</fullName>
        <description>This is the sales process for other type of accounts apart from agents and developers.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Sign Off</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Developing Proposal</fullName>
        </values>
        <values>
            <fullName>Invoiced</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Won</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Classification__c</fullName>
        <formula>TEXT( Account.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <formula>Account.PersonContact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_Number__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account.Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advance_Paid__c</fullName>
        <label>MIS Advance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Excluding_VAT__c</fullName>
        <formula>Amount -  VAT_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Excluding VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country_Picklist__c</fullName>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <label>Billing Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Type__c</fullName>
        <label>Brand Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JLR</fullName>
                </value>
                <value>
                    <fullName>Jaguar</fullName>
                </value>
                <value>
                    <fullName>Land Rover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Link_Install__c</fullName>
        <label>Case Link(Install)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Case_Link__c</fullName>
        <label>Case Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Case_Number_Install__c</fullName>
        <label>Case Number(Install)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type_Install__c</fullName>
        <label>Case Record Type(Install)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Install__c</fullName>
        <label>City(Install)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_On_Install__c</fullName>
        <label>Completed On (Install)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_On__c</fullName>
        <label>Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirm_Date_Dispatch_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm Date &amp; Dispatch Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Install__c</fullName>
        <label>Created Date(Install)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Step__c</fullName>
        <label>Current Ordering Tool Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_COPS_Approved__c</fullName>
        <label>COPS Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dealer_Email__c</fullName>
        <label>Dealer Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Type__c</fullName>
        <label>Dealership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retailer + AR</fullName>
                </value>
                <value>
                    <fullName>Retailer (Service Only)</fullName>
                </value>
                <value>
                    <fullName>Retailer (Sales Only)</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Overflow Workshop</fullName>
                </value>
                <value>
                    <fullName>EV Overflow Workshop</fullName>
                </value>
                <value>
                    <fullName>Authorised Repairer</fullName>
                </value>
                <value>
                    <fullName>Future Retailer</fullName>
                </value>
                <value>
                    <fullName>Future Retailer (Service Only)</fullName>
                </value>
                <value>
                    <fullName>Future Retailer (Sales Only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealership__c</fullName>
        <label>Dealership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Cost__c</fullName>
        <label>Equipment Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FA_URL_Install__c</fullName>
        <label>FA URL(Install)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FA_URL__c</fullName>
        <label>FA URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FieldAware_ID__c</fullName>
        <externalId>true</externalId>
        <label>FieldAware ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldAware_URL_del__c</fullName>
        <label>FieldAware URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>First_Quote_Sent_Date__c</fullName>
        <label>First Quote Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used in a process to ensure when a opportunity is edited via process , it does not fire the validation rule for the opportunity.</description>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Drive_Folder_Link__c</fullName>
        <description>Google Drive Folder Link</description>
        <label>Google Drive Folder Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>In_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Became_Scheduled_Date__c</fullName>
        <inlineHelpText>Records the first time Opportunity Stage changed to &quot;Install Scheduled&quot;</inlineHelpText>
        <label>Install Became Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Install_Completed_Date__c</fullName>
        <label>Install Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Install_Cost_Quote_2__c</fullName>
        <inlineHelpText>Don&apos;t forget to add margin!</inlineHelpText>
        <label>Install Quote 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Cost_Quote__c</fullName>
        <inlineHelpText>Don&apos;t forget to add margin!</inlineHelpText>
        <label>Install Quote 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Hours_2__c</fullName>
        <label>Install Hours 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Hours_Install__c</fullName>
        <label>Install Hours(Install)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Hours__c</fullName>
        <label>Install Hours 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Requested_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install Requested Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Status_New__c</fullName>
        <label>Install Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installer_Name_Install__c</fullName>
        <label>Installer Name(Install)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer_Name__c</fullName>
        <label>Installer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_OLEV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is OLEV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Opportunity_Won__c</fullName>
        <defaultValue>0</defaultValue>
        <description>is zero if opportunity is not won, is one if opportunity is won</description>
        <label>Is Opportunity Won?</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_ID_Install__c</fullName>
        <label>Job ID(Install)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <label>Job ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Stage_Change_Date__c</fullName>
        <label>Last Stage Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lease_Duration__c</fullName>
        <label>Lease Duration(months)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Start_Date__c</fullName>
        <label>Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leasing_Company__c</fullName>
        <label>Leasing Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_to_Competitor__c</fullName>
        <label>Lost to Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rolec</fullName>
                </value>
                <value>
                    <fullName>Chargemaster</fullName>
                </value>
                <value>
                    <fullName>Tesla</fullName>
                </value>
                <value>
                    <fullName>Franklin Energy</fullName>
                </value>
                <value>
                    <fullName>NewMotion</fullName>
                </value>
                <value>
                    <fullName>BluPoint</fullName>
                </value>
                <value>
                    <fullName>Evolt</fullName>
                </value>
                <value>
                    <fullName>EO Charging</fullName>
                </value>
                <value>
                    <fullName>Elm EV</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managed_Installation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Managed Installation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Accepted_Quote__c</fullName>
        <label>No of Accepted Quote</label>
        <summaryFilterItems>
            <field>Quote.Status</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Install_Type__c</fullName>
        <label>Non-Standard Install Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-install Site Survey</fullName>
                </value>
                <value>
                    <fullName>Pre-install Remote Survey</fullName>
                </value>
                <value>
                    <fullName>On-site Extra Work</fullName>
                </value>
                <value>
                    <fullName>On-site Survey &amp; Rescheduled Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Standard_Install__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Standard Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oportunity_Type__c</fullName>
        <description>Describes which Route To Market the opportunity is related to.</description>
        <inlineHelpText>Choose the route to market associated with this opportunity. Choose &quot;Strategic&quot; if it is an account which has a genuine possibility of expanding to over 500 Sockets</inlineHelpText>
        <label>Which Route to Market?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Home Strategic</fullName>
                </value>
                <value>
                    <fullName>Workplace</fullName>
                </value>
                <value>
                    <fullName>Workplace Strategic</fullName>
                </value>
                <value>
                    <fullName>Destination</fullName>
                </value>
                <value>
                    <fullName>Destination Strategic</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_100_Probability__c</fullName>
        <formula>IF(Probability = 1, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity 100% Probability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Classification__c</fullName>
        <label>Opportunity Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owned_Temporarily__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity Owned Temporarily</description>
        <label>Opportunity Owned Temporarily</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Route_to_Market__c</fullName>
        <label>Opportunity Route to Market</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Opportunity_Classification__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Workplace</fullName>
                </value>
                <value>
                    <fullName>Destination</fullName>
                </value>
                <value>
                    <fullName>Built Environment</fullName>
                </value>
                <value>
                    <fullName>Insights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Opportunity_Route_to_Market__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Motor Group</fullName>
                </value>
                <value>
                    <fullName>Leasing Company</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Fleet Management</fullName>
                </value>
                <value>
                    <fullName>Ordering Tool</fullName>
                </value>
                <value>
                    <fullName>Subcontractors</fullName>
                </value>
                <value>
                    <fullName>Finance Company</fullName>
                </value>
                <value>
                    <fullName>Corporate Fleet</fullName>
                </value>
                <value>
                    <fullName>Corporate/SME Motor Finance</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Business Park</fullName>
                </value>
                <value>
                    <fullName>Depot</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Grocer</fullName>
                </value>
                <value>
                    <fullName>Smart Cities</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Hotel &amp; Attractions</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Facilities Management</fullName>
                </value>
                <value>
                    <fullName>BE Influencer</fullName>
                </value>
                <value>
                    <fullName>Agents/Developers</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Design Engineer</fullName>
                </value>
                <value>
                    <fullName>Housing Associations</fullName>
                </value>
                <value>
                    <fullName>Property Management</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>Partially Dispatched</fullName>
                </value>
                <value>
                    <fullName>Ready for Dispatch</fullName>
                </value>
                <value>
                    <fullName>Install Only</fullName>
                </value>
                <value>
                    <fullName>Ready for Helen</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Tool_Customer_URL__c</fullName>
        <label>Ordering Tool Customer URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ordering_Tool_URL__c</fullName>
        <label>Ordering Tool URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Paylink__c</fullName>
        <label>Paylink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>MIS Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
                <value>
                    <fullName>Advance Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phase</label>
        <referenceTo>Phases__c</referenceTo>
        <relationshipLabel>Bidding Companies</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostCode_Install__c</fullName>
        <label>PostCode(Install)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <label>PostCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Manager_Install__c</fullName>
        <label>Project Manager(Install)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Type__c</fullName>
        <label>Purchase Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualified_Date__c</fullName>
        <inlineHelpText>Records the first time Opportunity Stage changes to &quot;Qualified&quot;</inlineHelpText>
        <label>Qualified Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>